--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
                                 Мої замовлення
                             </div>
                             <ul class="page__menu--item-list">
-                                <li><a href="/all.html" class="page__menu--item-link">Всі (52)</a></li>
-                                <li><a href="/in-work.html" class="page__menu--item-link active">Активні (2)</a>
+                                <li><a href="all.html" class="page__menu--item-link">Всі (52)</a></li>
+                                <li><a href="in-work.html" class="page__menu--item-link active">Активні (2)</a>
                                 </li>
-                                <li><a href="/completed.html" class="page__menu--item-link">Завершені (50)</a>
+                                <li><a href="completed.html" class="page__menu--item-link">Завершені (50)</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="page__menu--item">
-                            <a href="/bonuses.html" class="page__menu--item-title">
+                            <a href="bonuses.html" class="page__menu--item-title">
                                 Мої бонуси
                             </a>
                         </li>
                         <li class="page__menu--item">
-                            <a href="/discount.html" class="page__menu--item-title">
+                            <a href="discount.html" class="page__menu--item-title">
                                 Знижки
                             </a>
                         </li>
                         <li class="page__menu--item">
-                            <a href="/faq.html" class="page__menu--item-title">
+                            <a href="faq.html" class="page__menu--item-title">
                                 FAQ
                             </a>
                         </li>
@@ -402,7 +402,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a class="orders__item--link" href="order-info.html">
                                             Переглянути деталі
                                         </a>
                                     </div>
