--- a/completed.html
+++ b/completed.html
@@ -88,25 +88,25 @@
                         Мої замовлення
                      </div>
                      <ul class="page__menu--item-list">
-                        <li><a href="/all.html" class="page__menu--item-link">Всі (52)</a></li>
-                        <li><a href="/in-work.html" class="page__menu--item-link">Активні (2)</a>
+                        <li><a href="all.html" class="page__menu--item-link">Всі (52)</a></li>
+                        <li><a href="in-work.html" class="page__menu--item-link">Активні (2)</a>
                         </li>
-                        <li><a href="/completed.html" class="page__menu--item-link active">Завершені (50)</a>
+                        <li><a href="completed.html" class="page__menu--item-link active">Завершені (50)</a>
                         </li>
                      </ul>
                   </li>
                   <li class="page__menu--item">
-                     <a href="/bonuses.html" class="page__menu--item-title">
+                     <a href="bonuses.html" class="page__menu--item-title">
                         Мої бонуси
                      </a>
                   </li>
                   <li class="page__menu--item">
-                     <a href="/discount.html" class="page__menu--item-title">
+                     <a href="discount.html" class="page__menu--item-title">
                         Знижки
                      </a>
                   </li>
                   <li class="page__menu--item">
-                     <a href="/faq.html" class="page__menu--item-title">
+                     <a href="faq.html" class="page__menu--item-title">
                         FAQ
                      </a>
                   </li>
