fix_link_and_modal

--- a/all.html
+++ b/all.html
@@ -140,10 +140,10 @@
                             <div class="orders__item">
                                 <div class="orders__item--wrap">
                                     <div class="orders__item--left">
-                                        <div class="orders__item--title">
+                                        <a href="order-info.html" class="orders__item--title">
                                             <h2>Название работы в одну строчку</h2>
                                             <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                                        </div>
+                                        </a>
                                         <div class="orders__item--status work-done-need-pay">
                                             Робота готова, оплатіть залишок
                                         </div>
@@ -152,7 +152,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a href="order-info.html" class="orders__item--link">
                                             Переглянути деталі
                                         </a>
                                     </div>
@@ -184,10 +184,10 @@
                             <div class="orders__item">
                                 <div class="orders__item--wrap">
                                     <div class="orders__item--left">
-                                        <div class="orders__item--title">
+                                        <a href="order-info.html" class="orders__item--title">
                                             <h2>Название работы в две строчки Название работы в две строчки</h2>
                                             <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                                        </div>
+                                        </a>
                                         <div class="orders__item--status work-process">
                                             Ми пишемо вашу роботу
                                         </div>
@@ -196,7 +196,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a href="order-info.html" class="orders__item--link">
                                             Переглянути деталі
                                         </a>
                                     </div>
@@ -228,10 +228,10 @@
                             <div class="orders__item">
                                 <div class="orders__item--wrap">
                                     <div class="orders__item--left">
-                                        <div class="orders__item--title">
+                                        <a href="order-info.html" class="orders__item--title">
                                             <h2>Название работы в две строчки Название работы в две строчки</h2>
                                             <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                                        </div>
+                                        </a>
                                         <div class="orders__item--status work-done">
                                             Робота завершена
                                         </div>
@@ -240,7 +240,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a href="order-info.html" class="orders__item--link">
                                             Переглянути деталі
                                         </a>
                                     </div>
@@ -272,10 +272,10 @@
                             <div class="orders__item">
                                 <div class="orders__item--wrap">
                                     <div class="orders__item--left">
-                                        <div class="orders__item--title">
+                                        <a href="order-info.html" class="orders__item--title">
                                             <h2>Название работы в две строчки Название работы в две строчки</h2>
                                             <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                                        </div>
+                                        </a>
                                         <div class="orders__item--status expect-prepayment">
                                             Очікуємо передоплату
                                         </div>
@@ -284,7 +284,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a href="order-info.html" class="orders__item--link">
                                             Переглянути деталі
                                         </a>
                                     </div>
@@ -319,10 +319,10 @@
                             <div class="orders__item">
                                 <div class="orders__item--wrap">
                                     <div class="orders__item--left">
-                                        <div class="orders__item--title">
+                                        <a href="order-info.html" class="orders__item--title">
                                             <h2>Название работы в две строчки Название работы в две строчки</h2>
                                             <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                                        </div>
+                                        </a>
                                         <div class="orders__item--status work-evaluated">
                                             Робота оцінюється
                                         </div>
@@ -331,7 +331,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a href="order-info.html" class="orders__item--link">
                                             Переглянути деталі
                                         </a>
                                     </div>
@@ -376,10 +376,9 @@
                             <div class="orders__item">
                                 <div class="orders__item--wrap">
                                     <div class="orders__item--left">
-                                        <div class="orders__item--title">
+                                        <a href="order-info.html" class="orders__item--title">
                                             <h2>Название работы в одну строчку</h2>
-                                            <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                                        </div>
+                                        </a>
                                         <div class="orders__item--status work-done-need-pay">
                                             Робота готова, оплатіть залишок
                                         </div>
@@ -388,7 +387,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a href="order-info.html" class="orders__item--link">
                                             Переглянути деталі
                                         </a>
                                     </div>
@@ -420,10 +419,10 @@
                             <div class="orders__item">
                                 <div class="orders__item--wrap">
                                     <div class="orders__item--left">
-                                        <div class="orders__item--title">
+                                        <a href="order-info.html" class="orders__item--title">
                                             <h2>Название работы в две строчки Название работы в две строчки</h2>
                                             <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                                        </div>
+                                        </a>
                                         <div class="orders__item--status work-process">
                                             Ми пишемо вашу роботу
                                         </div>
@@ -432,7 +431,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a href="order-info.html" class="orders__item--link">
                                             Переглянути деталі
                                         </a>
                                     </div>
@@ -464,10 +463,10 @@
                             <div class="orders__item">
                                 <div class="orders__item--wrap">
                                     <div class="orders__item--left">
-                                        <div class="orders__item--title">
+                                        <a href="order-info.html" class="orders__item--title">
                                             <h2>Название работы в две строчки Название работы в две строчки</h2>
                                             <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                                        </div>
+                                        </a>
                                         <div class="orders__item--status expect-prepayment">
                                             Очікуємо передоплату
                                         </div>
@@ -476,7 +475,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a href="order-info.html" class="orders__item--link">
                                             Переглянути деталі
                                         </a>
                                     </div>
@@ -511,10 +510,10 @@
                             <div class="orders__item">
                                 <div class="orders__item--wrap">
                                     <div class="orders__item--left">
-                                        <div class="orders__item--title">
+                                        <a href="order-info.html" class="orders__item--title">
                                             <h2>Название работы в две строчки Название работы в две строчки</h2>
                                             <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                                        </div>
+                                        </a>
                                         <div class="orders__item--status work-evaluated">
                                             Робота оцінюється
                                         </div>
@@ -523,7 +522,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a href="order-info.html" class="orders__item--link">
                                             Переглянути деталі
                                         </a>
                                     </div>
@@ -568,10 +567,10 @@
                             <div class="orders__item">
                                 <div class="orders__item--wrap">
                                     <div class="orders__item--left">
-                                        <div class="orders__item--title">
+                                        <a href="order-info.html" class="orders__item--title">
                                             <h2>Название работы в две строчки Название работы в две строчки</h2>
                                             <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                                        </div>
+                                        </a>
                                         <div class="orders__item--status work-done">
                                             Робота завершена
                                         </div>
@@ -580,7 +579,7 @@
                                             <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                             <li>ID замовлення: <span>id-9167-223</span></li>
                                         </ul>
-                                        <a class="orders__item--link" href="#">
+                                        <a href="order-info.html" class="orders__item--link">
                                             Переглянути деталі
                                         </a>
                                     </div>
