--- a/in-work.html
+++ b/in-work.html
@@ -154,10 +154,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в одну строчку</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-done-need-pay">
                                  Робота готова, оплатіть залишок
                               </div>
@@ -166,7 +166,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -198,10 +198,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-process">
                                  Ми пишемо вашу роботу
                               </div>
@@ -210,7 +210,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -242,10 +242,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-done">
                                  Робота завершена
                               </div>
@@ -254,7 +254,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -286,10 +286,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status expect-prepayment">
                                  Очікуємо передоплату
                               </div>
@@ -298,7 +298,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -333,10 +333,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-evaluated">
                                  Робота оцінюється
                               </div>
@@ -345,7 +345,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -390,10 +390,9 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в одну строчку</h2>
-                                 <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-done-need-pay">
                                  Робота готова, оплатіть залишок
                               </div>
@@ -402,7 +401,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -434,10 +433,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-process">
                                  Ми пишемо вашу роботу
                               </div>
@@ -446,7 +445,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -478,10 +477,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status expect-prepayment">
                                  Очікуємо передоплату
                               </div>
@@ -490,7 +489,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -525,10 +524,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-evaluated">
                                  Робота оцінюється
                               </div>
@@ -537,7 +536,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -582,10 +581,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-done">
                                  Робота завершена
                               </div>
@@ -594,7 +593,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
