--- a/completed.html
+++ b/completed.html
@@ -132,7 +132,6 @@
             </div>
 
             <div class="page__right">
-
                <div class="page__content all hide">
                   <section class="orders">
                      <h1 class="orders__title">
@@ -141,10 +140,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в одну строчку</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-done-need-pay">
                                  Робота готова, оплатіть залишок
                               </div>
@@ -153,7 +152,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -185,10 +184,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-process">
                                  Ми пишемо вашу роботу
                               </div>
@@ -197,7 +196,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -229,10 +228,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-done">
                                  Робота завершена
                               </div>
@@ -241,7 +240,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -273,10 +272,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status expect-prepayment">
                                  Очікуємо передоплату
                               </div>
@@ -285,7 +284,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -320,10 +319,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-evaluated">
                                  Робота оцінюється
                               </div>
@@ -332,7 +331,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -377,10 +376,9 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в одну строчку</h2>
-                                 <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-done-need-pay">
                                  Робота готова, оплатіть залишок
                               </div>
@@ -389,7 +387,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -421,10 +419,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-process">
                                  Ми пишемо вашу роботу
                               </div>
@@ -433,7 +431,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -465,10 +463,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status expect-prepayment">
                                  Очікуємо передоплату
                               </div>
@@ -477,7 +475,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -512,10 +510,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-evaluated">
                                  Робота оцінюється
                               </div>
@@ -524,7 +522,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
@@ -569,10 +567,10 @@
                      <div class="orders__item">
                         <div class="orders__item--wrap">
                            <div class="orders__item--left">
-                              <div class="orders__item--title">
+                              <a href="order-info.html" class="orders__item--title">
                                  <h2>Название работы в две строчки Название работы в две строчки</h2>
                                  <!--<span class="quest-tippy tippy" data-tippy-content="Подсказка"></span>-->
-                              </div>
+                              </a>
                               <div class="orders__item--status work-done">
                                  Робота завершена
                               </div>
@@ -581,7 +579,7 @@
                                  <li>Строк виконання роботи: <span>31/07/2021</span></li>
                                  <li>ID замовлення: <span>id-9167-223</span></li>
                               </ul>
-                              <a class="orders__item--link" href="#">
+                              <a href="order-info.html" class="orders__item--link">
                                  Переглянути деталі
                               </a>
                            </div>
