--- a/faq.html
+++ b/faq.html
@@ -111,8 +111,8 @@
                                 FAQ
                             </a>
                         </li>
-                        <li class="page__menu--item">
-                            <a href="#" class="page__menu--item-title">
+                        <li class="page__menu--item my-profile">
+                            <a href="#my-profile" class="page__menu--item-title">
                                 Мій профіль
                             </a>
                         </li>
